// Original file: license.proto

import type { LicenseRequest as _licensePackage_LicenseRequest, LicenseRequest__Output as _licensePackage_LicenseRequest__Output } from '../licensePackage/LicenseRequest';

export interface DeleteAffictaion {
  'licenseRequest'?: (_licensePackage_LicenseRequest | null);
  'deletedId'?: (number);
}

export interface DeleteAffictaion__Output {
  'licenseRequest'?: (_licensePackage_LicenseRequest__Output);
  'deletedId'?: (number);
}
